; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md.c_mbedtls_md_get_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md.c_mbedtls_md_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @mbedtls_md_get_size(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = icmp eq %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8 0, i8* %2, align 1
  br label %11

7:                                                ; preds = %1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i8, i8* %9, align 1
  store i8 %10, i8* %2, align 1
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i8, i8* %2, align 1
  ret i8 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
